[NEW] Usabilidade do módulo de CRM

--- a/l10n_br_crm/views/crm_lead_view.xml
+++ b/l10n_br_crm/views/crm_lead_view.xml
@@ -8,43 +8,90 @@
             <field name="model">crm.lead</field>
             <field name="inherit_id" ref="crm.crm_case_form_view_leads"/>
             <field name="arch" type="xml">
-                <field name="street2" position="replace"/>
-                <field name="zip" position="replace"/>
-                <field name="street" position="replace">
-                    <field name="zip" placeholder="CEP" style="width:50%" />
-                    <field name="street" placeholder="Logradouro" />
-                    <field name="number" placeholder="Número"/>
-                    <field name="street2" placeholder="Complemento"/>
-                    <field name="district" placeholder="Bairro"/>
-                </field>
-                <field name="state_id" position="attributes">
-                    <attribute name="domain">[('country_id','=',country_id)]</attribute>
-                    <attribute name="style">width:100%</attribute>
-                </field>
-                <field name="country_id" position="replace"/>
-                <field name="state_id" position="before">
-                    <field name="country_id" placeholder="País" />
-                </field>
-                <field name="state_id" position="after">
-                    <field name="l10n_br_city_id" placeholder="Cidade"/>
-                </field>
-                <field name="city" position="replace">
-                    <field name="city" invisible="1" />
-                </field>
+                <xpath expr="//form" position="inside">
+                    <field name="exige_cnpj_cpf" invisible="1" />
+                    <field name="exige_endereco" invisible="1" />
+                </xpath>
+                <xpath expr="//div/h1" position="after">
+                    <h2>
+                        <field name="cnpj_cpf" placeholder="CNPJ ou CPF"/>
+                        <field name="tipo_pessoa" invisible="1" />
+                    </h2>
+                </xpath>
                 <field name="partner_name" position="after">
-                    <field name="legal_name"/>
-                    <field name="cnpj"/>
-                    <field name="inscr_est"/>
+                    <field name="razao_social" string="Nome completo Razão Social"/>
+                    <field name="fantasia" attrs="{'invisible': [('tipo_pessoa', '=', 'F')]}" />
+                </field>
+                <field name="zip" position="replace" />
+                <field name="state_id" position="replace"/>
+                <field name="country_id" position="replace"/>
+                <field name="city" position="replace"/>
+                <field name="street2" position="replace"/>
+                <field name="street" position="replace">
+                    <field name="city" invisible="1"/>
+                    <field name="state_id" invisible="1"/>
+                    <field name="country_id" invisible="1"/>
+                    <field name="zip" placeholder="99999-999" />
+                    <field name="numero" placeholder="Número ou S/N"  />
+                    <field name="street" placeholder="Street..." class="o_address_street" />
+                    <field name="street2" placeholder="Street 2..." class="o_address_street"/>
+                    <field name="bairro" colspan="6" placeholder="District"  />
+                    <field name="municipio_id" placeholder="Municipio" options="{'no_open': True, 'no_create': True}" colspan="6"  />
                 </field>
                 <field name="email_from" position="before">
-                    <field name="name_surname" />
+                    <field name="nome" />
                     <field name="cpf"/>
                     <field name="rg"/>
                 </field>
-                <field name="type" position="after">
-                    <field name="inscr_mun"/>
-                    <field name="suframa"/>
-                </field>
+                <page name="extra" position="after">
+                    <page name="inscricoes" string="Inscrições e registros">
+                        <group col="4">
+                            <group col="4" colspan="4">
+                                <separator string="Inscrição Estadual" colspan="4" />
+                                <field name="contribuinte" colspan="2" required="1"/>
+                                <field name="ie" attrs="{'invisible': [('contribuinte', '!=', '1')], 'required': [('contribuinte', '=', '1')]}" colspan="2" />
+                            </group>
+                            <newline />
+                            <group col="6" colspan="4" attrs="{'invisible': [('tipo_pessoa', '!=', 'F')]}">
+                                <separator string="RG" colspan="6"  />
+                                <field name="rg_numero" string="Número" colspan="2" />
+                                <field name="rg_orgao_emissor" string="Órgão emissor" colspan="2" />
+                                <field name="rg_data_expedicao" string="Data de emissão" colspan="2" />
+                            </group>
+                            <newline />
+                            <group col="4" colspan="4" attrs="{'invisible': [('tipo_pessoa', '=', 'F')]}" >
+                                <separator string="Outras inscrições" colspan="6" />
+                                <separator string="Inscrição Municipal" colspan="2" />
+                                <separator string="CEI" colspan="2" />
+                                <field name="im" colspan="2" nolabel="1" />
+                                <field name="cei" colspan="2" nolabel="1" />
+                                <separator string="SUFRAMA" colspan="2" />
+                                <separator string="RNTRC" colspan="2" />
+                                <field name="suframa" colspan="2" nolabel="1" />
+                                <field name="rntrc" colspan="2" nolabel="1" />
+                                <separator string="CRC" />
+                                <newline />
+                                <field name="crc" colspan="2" />
+                                <field name="crc_uf" colspan="2" options="{'no_open': True, 'no_create': True}" />
+                            </group>
+                        </group>
+                    </page>
+                    <page name="fiscal" string="Fiscal">
+                        <group col="4">
+                            <field name="regime_tributario" />
+                            <newline />
+                            <field name="eh_consumidor_final" />
+                            <field name="eh_orgao_publico" />
+                            <field name="eh_transportadora" />
+                            <field name="eh_funcionario" />
+                        </group>
+                        <!--
+                        <field name="eh_cooperativa" />
+                        <field name="eh_convenio" />
+                        <field name="eh_sindicato" />
+                        -->
+                    </page>
+                </page>
             </field>
         </record>
 
