--- a/l10n_br_base/views/sped_participante_base_view.xml
+++ b/l10n_br_base/views/sped_participante_base_view.xml
@@ -191,41 +191,12 @@
         </field>
     </record>
 
-    <record model="ir.actions.act_window" id="sped_participante_base_acao">
-        <field name="name">Todos</field>
-        <field name="res_model">sped.participante</field>
-        <field name="view_type">form</field>
-        <field name="view_mode">kanban,tree,form</field>
-        <field name="search_view_id" ref="l10n_br_base.sped_participante_base_search" />
-    </record>
-
-    <record model="ir.actions.act_window.view" id="sped_participante_base_kanban_acao">
-        <field eval="1" name="sequence"/>
-        <field name="view_mode">kanban</field>
-        <field name="view_id" ref="sped_participante_base_kanban"/>
-        <field name="act_window_id" ref="sped_participante_base_acao"/>
-    </record>
-
-    <record model="ir.actions.act_window.view" id="sped_participante_base_tree_acao">
-        <field eval="2" name="sequence"/>
-        <field name="view_mode">tree</field>
-        <field name="view_id" ref="sped_participante_base_tree"/>
-        <field name="act_window_id" ref="sped_participante_base_acao"/>
-    </record>
-
-    <record model="ir.actions.act_window.view" id="sped_participante_base_form_acao">
-        <field eval="3" name="sequence"/>
-        <field name="view_mode">form</field>
-        <field name="view_id" ref="sped_participante_base_form"/>
-        <field name="act_window_id" ref="sped_participante_base_acao"/>
-    </record>
-
     <menuitem
         id="menu_sped_participante_base"
         sequence="100"
         name="Todos"
         parent="menu_cadastro_participante"
-        action="sped_participante_base_acao"
+        action="base.action_partner_form"
         />
 
 </odoo>
