--- a/l10n_br_base/views/sped_participante_fornecedor_view.xml
+++ b/l10n_br_base/views/sped_participante_fornecedor_view.xml
@@ -57,43 +57,12 @@
         </field>
     </record>-->
 
-    <record model="ir.actions.act_window" id="sped_participante_fornecedor_acao">
-        <field name="name">Fornecedores</field>
-        <field name="domain">[('eh_fornecedor', '=', True)]</field>
-        <field name="context">{'default_eh_fornecedor': True, 'eh_fornecedor': True}</field>
-        <field name="res_model">sped.participante</field>
-        <field name="view_type">form</field>
-        <field name="view_mode">kanban,tree,form</field>
-        <field name="search_view_id" ref="l10n_br_base.sped_participante_fornecedor_search" />
-    </record>
-
-    <record model="ir.actions.act_window.view" id="sped_participante_fornecedor_kanban_acao">
-        <field eval="1" name="sequence"/>
-        <field name="view_mode">kanban</field>
-        <field name="view_id" ref="sped_participante_base_kanban"/>
-        <field name="act_window_id" ref="sped_participante_fornecedor_acao"/>
-    </record>
-
-    <record model="ir.actions.act_window.view" id="sped_participante_fornecedor_tree_acao">
-        <field eval="2" name="sequence"/>
-        <field name="view_mode">tree</field>
-        <field name="view_id" ref="sped_participante_fornecedor_tree"/>
-        <field name="act_window_id" ref="sped_participante_fornecedor_acao"/>
-    </record>
-
-    <record model="ir.actions.act_window.view" id="sped_participante_fornecedor_form_acao">
-        <field eval="3" name="sequence"/>
-        <field name="view_mode">form</field>
-        <field name="view_id" ref="sped_participante_fornecedor_form"/>
-        <field name="act_window_id" ref="sped_participante_fornecedor_acao"/>
-    </record>
-
     <menuitem
         id="menu_sped_participante_fornecedor"
         sequence="2"
         name="Fornecedores"
         parent="menu_cadastro_participante"
-        action="sped_participante_fornecedor_acao"
+        action="base.action_partner_supplier_form"
         />
 
 </odoo>
