[REM] eh_cliente / eh_fornecedor

--- a/sped_sale/views/inherited_sale_order_orcamento_view.xml
+++ b/sped_sale/views/inherited_sale_order_orcamento_view.xml
@@ -47,7 +47,7 @@
                         <newline />
                         <field name="participante_id" string="Cliente"
                                colspan="4"
-                               domain="[('eh_cliente', '=', True)]"
+                               domain="[('customer', '=', True)]"
                                options='{"always_reload": True}'
                                required="1" attrs="{'readonly': [('state', 'not in', ['draft', 'sent'])]}" />
                         <newline />
