--- a/sped_account/views/inherited_account_invoice_customer_view.xml
+++ b/sped_account/views/inherited_account_invoice_customer_view.xml
@@ -15,7 +15,7 @@
             </field>
             <field name="partner_id" position="after">
                 <field name="participante_id" string="Customer"
-                       domain="[('eh_cliente', '=', True)]"
+                       domain="[('customer', '=', True)]"
                        attrs="{'required': [('is_brazilian', '=', True)], 'invisible': [('is_brazilian', '!=', True)]}"/>
             </field>
             <xpath expr="//page[@name='other_info']/group/group/field[@name='company_id']"
