--- a/sped_purchase/views/purchase_order.xml
+++ b/sped_purchase/views/purchase_order.xml
@@ -17,7 +17,7 @@
                 </field>
                 <field name="partner_id" position="after">
                     <field name="participante_id" string="Customer"
-                           domain="[('eh_cliente', '=', True)]"
+                           domain="[('supplier', '=', True)]"
                            attrs="{'required': [('is_brazilian', '=', True)], 'invisible': [('is_brazilian', '!=', True)]}"/>
                 </field>
                 <xpath expr="//group/field[@name='company_id']"
