--- a/finan/views/finan_lancamento_divida_a_pagar_view.xml
+++ b/finan/views/finan_lancamento_divida_a_pagar_view.xml
@@ -15,13 +15,13 @@
             <xpath expr="//button[@name='confirma_lancamento']" position="before">
                 <button name="cria_pagamento" string="Novo pagamento" class="btn-primary" type="object"
                     attrs="{'invisible': ['|', ('provisorio', '=', True), ('situacao_divida', 'in', ['quitado', 'baixado', 'baixado_parcialmente'])]}"
-                    context="{'default_divida_id': id, 'default_tipo': 'pagamento', 'default_conta_id': conta_id, 'default_empresa_id': empresa_id, 'default_participante_id': participante_id, 'default_vr_documento': vr_saldo}" />
+                    context="{'default_divida_id': id, 'default_tipo': 'pagamento', 'default_conta_id': conta_id, 'default_empresa_id': empresa_id, 'default_partner_id': partner_id, 'default_vr_documento': vr_saldo}" />
             </xpath>
 
             <xpath expr="//form[1]" position="attributes">
                 <attribute name="string">Conta a pagar</attribute>
             </xpath>
-            <field name="participante_id" position="attributes">
+            <field name="partner_id" position="attributes">
                 <attribute name="string">Fornecedor</attribute>
             </field>
             <xpath expr="//separator[@name='valores_pagos']" position="attributes">
@@ -38,7 +38,7 @@
             </page>
             <field name="pagamento_ids" position="attributes">
                 <attribute name="context">{
-                    'default_tipo': 'pagamento', 'default_conta_id': conta_id, 'default_empresa_id': empresa_id, 'default_participante_id': participante_id, 'default_vr_documento': vr_saldo, 'default_vr_movimentado': vr_saldo,
+                    'default_tipo': 'pagamento', 'default_conta_id': conta_id, 'default_empresa_id': empresa_id, 'default_partner_id': partner_id, 'default_vr_documento': vr_saldo, 'default_vr_movimentado': vr_saldo,
                     'form_view_ref': 'finan.finan_lancamento_pagamento_one2many_pagamento_form', 'tree_view_ref': 'finan.finan_lancamento_pagamento_one2many_pagamento_tree'
                 }</attribute>
             </field>
@@ -54,7 +54,7 @@
             <xpath expr="//tree[1]" position="attributes">
                 <attribute name="string">Contas a pagar</attribute>
             </xpath>
-            <field name="participante_id" position="attributes">
+            <field name="partner_id" position="attributes">
                 <attribute name="string">Fornecedor</attribute>
             </field>
             <field name="vr_quitado_documento" position="attributes">
