--- a/finan/wizards/report_xlsx_financial_partner_statement_wizard.xml
+++ b/finan/wizards/report_xlsx_financial_partner_statement_wizard.xml
@@ -18,7 +18,7 @@
                     <field name="type" />
                 </group>
                 <group>
-                    <field name="participante_id" />
+                    <field name="partner_id" />
                 </group>
                 <group string="Period">
                     <group>
