--- a/sped/views/sped_documento_base_view.xml
+++ b/sped/views/sped_documento_base_view.xml
@@ -57,7 +57,7 @@
                                 <group colspan="6" col="6">
                                     <separator string="Destinatário" colspan="6" attrs="{'invisible': [('entrada_saida', '=', '0')]}" />
                                     <separator string="Remetente" colspan="6" attrs="{'invisible': [('entrada_saida', '=', '1')]}" />
-                                    <field name="participante_id" nolabel= "1" colspan="6" required="1" options="{'no_open': True, 'no_create': True}" domain="[('cnpj_cpf', '!=', False)]" attrs="{'readonly': [('permite_alteracao', '=', False)]}" />
+                                    <field name="partner_id" nolabel= "1" colspan="6" required="1" options="{'no_open': True, 'no_create': True}" domain="[('cnpj_cpf', '!=', False)]" attrs="{'readonly': [('permite_alteracao', '=', False)]}" />
                                     <newline />
                                     <field name="participante_razao_social" string="Nome completo Razão Social" colspan="6" />
                                     <newline />
@@ -263,9 +263,9 @@
                                     <field name="reboque_4_id" attrs="{'invisible': [('reboque_3_id', '=', False)], 'readonly': [('permite_alteracao', '=', False)]}" options="{'no_create': True, 'no_open': True}" domain="['!', ('id', 'in', [veiculo_id, reboque_1_id, reboque_2_id, reboque_3_id])]" />
                                     <field name="reboque_5_id" attrs="{'invisible': [('reboque_4_id', '=', False)], 'readonly': [('permite_alteracao', '=', False)]}" options="{'no_create': True, 'no_open': True}" domain="['!', ('id', 'in', [veiculo_id, reboque_1_id, reboque_2_id, reboque_3_id, reboque_4_id])]" />
                                     <newline />
-                                    <field name="endereco_retirada_id" colspan="4" domain="[('participante_id', '=', participante_id)]" options="{'no_create': True, 'no_open': True}" attrs="{'invisible': ['!', ('modalidade_frete', 'in', ['0', '1', '2'])], 'readonly': [('permite_alteracao', '=', False)]}" />
+                                    <field name="endereco_retirada_id" colspan="4" domain="[('partner_id', '=', partner_id)]" options="{'no_create': True, 'no_open': True}" attrs="{'invisible': ['!', ('modalidade_frete', 'in', ['0', '1', '2'])], 'readonly': [('permite_alteracao', '=', False)]}" />
                                     <newline />
-                                    <field name="endereco_entrega_id" colspan="4" domain="[('participante_id', '=', participante_id)]" options="{'no_create': True, 'no_open': True}" attrs="{'invisible': ['!', ('modalidade_frete', 'in', ['0', '1', '2'])], 'readonly': [('permite_alteracao', '=', False)]}" />
+                                    <field name="endereco_entrega_id" colspan="4" domain="[('partner_id', '=', partner_id)]" options="{'no_create': True, 'no_open': True}" attrs="{'invisible': ['!', ('modalidade_frete', 'in', ['0', '1', '2'])], 'readonly': [('permite_alteracao', '=', False)]}" />
                                     <newline />
                                     <separator string="Volumes" />
                                     <newline />
@@ -384,7 +384,7 @@
                 <field name="numero" />
                 <field name="data_emissao" />
                 <field name="data_entrada_saida" />
-                <field name="participante_id" />
+                <field name="partner_id" />
                 <field name="vr_nf" sum="vr_nf" />
             </tree>
         </field>
@@ -416,7 +416,7 @@
                 <field name="chave" />
                 <separator/>
                 <field name="operacao_id" />
-                <field name="participante_id" />
+                <field name="partner_id" />
                 <field name="empresa_id" />
                 <field name="produto_id" />
                 <separator/>
@@ -424,7 +424,7 @@
                 <field name="ncm_id" />
                 <field name="cest_id" />
                 <group expand="0" string="Group By">
-                        <filter name="group_by_participante_id" string="Participante" context="{'group_by':'participante_id'}"/>
+                        <filter name="group_by_partner_id" string="Participante" context="{'group_by':'partner_id'}"/>
                         <filter name="group_by_empresa_id" string="Empresa" context="{'group_by':'empresa_id'}"/>
                         <filter name="situacao_nfe" string="Situação" context="{'group_by':'situacao_nfe'}"/>
                         <filter name="situacao_fiscal" string="Situação Fiscal" context="{'group_by':'situacao_fiscal'}"/>
