--- a/sped/views/sped_documento_item_declaracao_importacao_view.xml
+++ b/sped/views/sped_documento_item_declaracao_importacao_view.xml
@@ -23,7 +23,7 @@
                         <field name="via_trans_internacional" required="1" />
                         <field name="vr_afrmm" />
                         <field name="forma_importacao" required="1" />
-                        <field name="participante_id" required="1" colspan="4" domain="[('estado', '!=', False), ('estado', '!=', 'EX'), ('cnpj_cpf', '!=', False)]" options="{'no_create': True, 'no_open': True}" />
+                        <field name="partner_id" required="1" colspan="4" domain="[('estado', '!=', False), ('estado', '!=', 'EX'), ('cnpj_cpf', '!=', False)]" options="{'no_create': True, 'no_open': True}" />
                         <separator string="Adição" colspan="4" />
                         <field name="numero_adicao" required="1" />
                         <field name="sequencial" required="1" />
@@ -55,7 +55,7 @@
                 <field name="currency_aliquota_id" invisible="1"/>
                 <field name="numero_documento" />
                 <field name="data_registro" />
-                <field name="participante_id"  />
+                <field name="partner_id"  />
                 <field name="vr_afrmm" />
             </tree>
         </field>
