--- a/l10n_br_base/views/sped_endereco_base_view.xml
+++ b/l10n_br_base/views/sped_endereco_base_view.xml
@@ -151,7 +151,7 @@
         id="menu_sped_endereco_base"
         sequence="100"
         name="Endereços"
-        parent="menu_cadastro_participante"
+        parent="menu_cadastro_partner"
         action="sped_endereco_base_acao"
         />-->
 
