--- a/l10n_br_base/views/sped_participante_base_view.xml
+++ b/l10n_br_base/views/sped_participante_base_view.xml
@@ -230,7 +230,7 @@
         id="menu_sped_participante_base"
         sequence="100"
         name="Todos"
-        parent="menu_cadastro_participante"
+        parent="menu_cadastro_partner"
         action="base.action_partner_form"
         />
 
