--- a/l10n_br_base/views/sped_participante_cliente_view.xml
+++ b/l10n_br_base/views/sped_participante_cliente_view.xml
@@ -61,7 +61,7 @@
         id="menu_sped_participante_cliente"
         sequence="1"
         name="Clientes"
-        parent="menu_cadastro_participante"
+        parent="menu_cadastro_partner"
         action="base.action_partner_customer_form"
         />
 
