--- a/l10n_br_base/views/sped_participante_fornecedor_view.xml
+++ b/l10n_br_base/views/sped_participante_fornecedor_view.xml
@@ -61,7 +61,7 @@
         id="menu_sped_participante_fornecedor"
         sequence="2"
         name="Fornecedores"
-        parent="menu_cadastro_participante"
+        parent="menu_cadastro_partner"
         action="base.action_partner_supplier_form"
         />
 
