--- a/sped/views/sped_documento_emissao_nfce_view.xml
+++ b/sped/views/sped_documento_emissao_nfce_view.xml
@@ -15,7 +15,7 @@
             <xpath expr="//form[1]" position="attributes">
                 <attribute name="string">Emissão de NFC-e</attribute>
             </xpath>
-            <page name="participante" position="attributes">
+            <page name="partner" position="attributes">
                 <attribute name="string">Consumidor</attribute>
             </page>
             <page name="empenho" position="replace" />
