--- a/sped_cfe/views/sped_documento_emissao_cfe_view.xml
+++ b/sped_cfe/views/sped_documento_emissao_cfe_view.xml
@@ -25,7 +25,7 @@
             <xpath expr="//form[1]" position="attributes">
                 <attribute name="string">Emissão de CF-e</attribute>
             </xpath>
-            <page name="participante" position="attributes">
+            <page name="partner" position="attributes">
                 <attribute name="string">Consumidor</attribute>
             </page>
             <page name="empenho" position="replace" />
