--- a/sped_cfe/views/sped_participante_administradora_cartao_view.xml
+++ b/sped_cfe/views/sped_participante_administradora_cartao_view.xml
@@ -1,106 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-    Copyright 2016 Taŭga Tecnologia - Aristides Caldeira <aristides.caldeira@tauga.com.br>
     Copyright 2017 KMEE - Luiz Felipe do Divino <luiz.divino@kmee.com.br>
     License AGPL-3 or later (http://www.gnu.org/licenses/agpl)
 -->
 <odoo>
 
-    <record model="ir.ui.view" id="sped_participante_administradora_form">
-        <field name="name">sped.participante.administradora.form</field>
-        <field name="model">sped.participante</field>
+    <record model="ir.ui.view" id="res_partner_administradora_form">
+        <field name="name">res.partner.administradora.form in (sped_cfe)</field>
+        <field name="model">res.partner</field>
         <field name="priority">1</field>
         <field name="mode">primary</field>
-        <field name="inherit_id" ref="l10n_br_base.sped_participante_base_form" />
+        <field name="inherit_id" ref="l10n_br_base.res_partner_form" />
         <field name="arch" type="xml">
             <xpath expr="//form[1]" position="attributes">
-                <attribute name="string">Cliente</attribute>
+                <attribute name="string">Administradora Cartão</attribute>
             </xpath>
             <field name="user_id" position="after">
                 <field name="eh_administradora_cartao" />
             </field>
-            <field name="codigo" position="before">
-               <field name="codigo_administradora_cartao"/>
+            <field name="cnpj_cpf" position="before">
+               <field name="codigo_administradora_cartao" placeholder="Codigo Administradora cartão"/>
             </field>
         </field>
     </record>
 
-    <record model="ir.ui.view" id="sped_participante_administradora_tree">
-        <field name="name">sped.participante.administradora.tree</field>
-        <field name="model">sped.participante</field>
+    <record model="ir.ui.view" id="res_partner_administradora_tree">
+        <field name="name">res.partner.administradora.tree</field>
+        <field name="model">res.partner</field>
         <field name="priority">1</field>
         <field name="mode">primary</field>
-        <field name="inherit_id" ref="l10n_br_base.sped_participante_base_tree" />
+        <field name="inherit_id" ref="l10n_br_base.res_partner_tree" />
         <field name="arch" type="xml">
             <xpath expr="//tree[1]" position="attributes">
-                <attribute name="string">Cliente</attribute>
+                <attribute name="string">Administradora Cartão</attribute>
             </xpath>
         </field>
     </record>
 
-    <record model="ir.ui.view" id="sped_participante_administradora_search">
-        <field name="name">sped.participante.administradora.search</field>
-        <field name="model">sped.participante</field>
-        <field name="priority">1</field>
-        <field name="mode">primary</field>
-        <field name="inherit_id" ref="l10n_br_base.sped_participante_base_search" />
-        <field name="arch" type="xml">
-            <xpath expr="//search[1]" position="attributes">
-                <attribute name="string">Administradora</attribute>
-            </xpath>
-        </field>
-    </record>
 
-<!--    <record model="ir.ui.view" id="sped_participante_cliente_kanban">
-        <field name="name">sped.participante.cliente.kanban</field>
-        <field name="model">sped.participante</field>
-        <field name="priority">1</field>
-        <field name="mode">primary</field>
-        <field name="inherit_id" ref="l10n_br_base.sped_participante_base_kanban" />
-        <field name="arch" type="xml">
-            <xpath expr="//kanban[1]" position="attributes">
-                <attribute name="string">Cliente</attribute>
-            </xpath>
-        </field>
-    </record>-->
-
-    <record model="ir.actions.act_window" id="sped_participante_administradora_acao">
-        <field name="name">Clientes</field>
+    <record model="ir.actions.act_window" id="res_partner_administradora_acao">
+        <field name="name">Administradora Cartão</field>
         <field name="domain">[('eh_administradora_cartao', '=', True)]</field>
         <field name="context">{'default_eh_administradora_cartao': True, 'eh_administradora_cartao': True, 'default_eh_consumidor_final': True, 'eh_consumidor_final': True}</field>
-        <field name="res_model">sped.participante</field>
+        <field name="res_model">res.partner</field>
         <field name="view_type">form</field>
         <field name="view_mode">kanban,tree,form</field>
-        <field name="search_view_id" ref="l10n_br_base.sped_participante_cliente_search" />
     </record>
 
-    <record model="ir.actions.act_window.view" id="sped_participante_cliente_kanban_acao">
-        <field eval="1" name="sequence"/>
-        <field name="view_mode">kanban</field>
-        <field name="view_id" ref="l10n_br_base.sped_participante_base_kanban"/>
-        <field name="act_window_id" ref="sped_participante_administradora_acao"/>
-    </record>
-
-    <record model="ir.actions.act_window.view" id="sped_participante_administradora_tree_acao">
+    <record model="ir.actions.act_window.view" id="res_partner_administradora_tree_acao">
         <field eval="2" name="sequence"/>
         <field name="view_mode">tree</field>
-        <field name="view_id" ref="sped_participante_administradora_tree"/>
-        <field name="act_window_id" ref="sped_participante_administradora_acao"/>
+        <field name="view_id" ref="res_partner_administradora_tree"/>
+        <field name="act_window_id" ref="res_partner_administradora_acao"/>
     </record>
 
-    <record model="ir.actions.act_window.view" id="sped_participante_administradora_form_acao">
+    <record model="ir.actions.act_window.view" id="res_partner_administradora_form_acao">
         <field eval="3" name="sequence"/>
         <field name="view_mode">form</field>
-        <field name="view_id" ref="sped_participante_administradora_form"/>
-        <field name="act_window_id" ref="sped_participante_administradora_acao"/>
+        <field name="view_id" ref="res_partner_administradora_form"/>
+        <field name="act_window_id" ref="res_partner_administradora_acao"/>
     </record>
 
     <menuitem
-        id="menu_sped_participante_administradora_cartao"
+        id="menu_res_partner_administradora_cartao"
         sequence="3"
         name="Administradora Cartão"
-        parent="l10n_br_base.menu_cadastro_participante"
-        action="sped_participante_administradora_acao"
+        parent="l10n_br_base.menu_cadastro_partner"
+        action="res_partner_administradora_acao"
         />
 
 </odoo>
